--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = 
+	me-no-dev/ESP Async WebServer@^1.2.3
+	bblanchon/ArduinoJson@^6.21.3
